--- a/src/index.css
+++ b/src/index.css
@@ -515,6 +515,13 @@ body {
   font-weight: 400;
   
 }
+.carousel-top-text-1 {
+  font-size: 46px;
+  color: black;
+  font-weight: 400;
+  margin-top: 50px;
+  
+}
 
 .investing-container {
   width: 100%;
