--- a/src/index.css
+++ b/src/index.css
@@ -512,6 +512,7 @@ body {
 .carousel-top-text {
   font-size: 46px;
   color: black;
+  margin-top: 25px;
   font-weight: 400;
   
 }
@@ -581,15 +582,27 @@ body {
 
 .center-circle {
   position: absolute;
-  width: 250px;
-  height: 250px;
-  border: 3px solid #f15a22;
+  width: 300px;
+  height: 300px;
+  border: 5px solid #f15a22 !important;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  z-index: 1000;
+  z-index: 10000;
+}
+.center-circle1 {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  border: 5px solid #ffffff !important;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 10000;
 }
 
 
@@ -613,7 +626,7 @@ body {
   top: 22%;
   left: 29% !important;
   border-radius: 50%;
-  border: 2px solid white;
+  border: 4px solid white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -635,11 +648,11 @@ body {
   width: 500px;
   height: 500px;
   border-radius: 50%;
-  border: 5px solid #f15a22;
+  border: 5px solid #3e9c35;
   display: flex;
   justify-content: center;
   align-items: center;
-  right: 24.5%;
+  right: 34%;
   
 }
 .circular-menu3 {
@@ -699,20 +712,20 @@ body {
 }
 
 /* Circular positioning for each item */
-.item-1 { top: -6%; font-size: 30px; width: 100%; left: 50%; color: white; transform: translate(-50%, -50%); }
-.item-2 { top: 50%; font-size: 30px; width: 50%; left: -23%; color: white; transform: translate(-50%, -50%); }
-.item-3 { top: 50%; font-size: 30px; width: 40%; right: -22%; color: white; transform: translate(50%, -50%); }
+.item-1 { top: -7%; font-size: 30px; width: 100%; left: 50%; color: white; transform: translate(-50%, -50%); }
+.item-2 { top: 50%; font-size: 30px; width: 50%; left: -25%; color: white; transform: translate(-50%, -50%); }
+.item-3 { top: 50%; font-size: 30px; width: 40%; right: -25%; color: white; transform: translate(50%, -50%); }
 .item-4 { bottom: 0; top: 101%; font-size: 30px; left: 50%; color: white; transform: translate(-50%, 50%); }
 
-.restaurant-1 { top: 50%; font-size: 25px; width: 100%; left: -30%; color: white; transform: translate(-50%, -50%); }
+.restaurant-1 { top: 50%; font-size: 25px; width: 100%; left: -24%; color: white; transform: translate(-50%, -50%); }
 .restaurant-2 { top: -8%; line-height: normal; font-size: 25px; width: 50%; left: 50%; color: white; transform: translate(-50%, -50%); }
 .restaurant-3 { top: 50%; font-size: 25px; width: 40%; right: -18%; color: white; transform: translate(50%, -50%); }
-.restaurant-4 { bottom: 0; top: 101%; font-size: 25px; left: 50%; color: white; transform: translate(-50%, 50%); }
+.restaurant-4 { bottom: 0; top: 103%; font-size: 25px; left: 50%; color: white; transform: translate(-50%, 50%); }
 
-.itemso-1 { top: 50%; font-size: 25px; width: 50%; left: -28%; color: white; transform: translate(-50%, -50%); }
-.itemso-2 { top: -12%; line-height: normal; font-size: 25px; width: 50%; left: 50%; color: white; transform: translate(-50%, -50%); }
-.itemso-3 { top: 50%; font-size: 25px; width: 53%; right: -28%; color: white; transform: translate(50%, -50%); }
-.itemso-4 { bottom: 0; top: 101%; font-size: 25px; left: 50%; color: white; transform: translate(-50%, 50%); }
+.itemso-1 { top: 50%; font-size: 25px; width: 50%; left: -15%; color: white; transform: translate(-50%, -50%); }
+.itemso-2 { top: -7%; line-height: normal; font-size: 25px; width: 50%; left: 50%; color: white; transform: translate(-50%, -50%); }
+.itemso-3 { top: 50%; font-size: 25px; width: 53%; right: -16%; color: white; transform: translate(50%, -50%); }
+.itemso-4 { bottom: 0; top: 104%; font-size: 25px; left: 50%; color: white; transform: translate(-50%, 50%); }
 
 .prod2-1 { top: 50%; font-size: 25px; width: 100%; left: -29%; color: white; transform: translate(-50%, -50%); }
 .prod2-2 { top: -8%; line-height: normal; font-size: 25px; width: 100%; left: 50%; color: white; transform: translate(-50%, -50%); }
@@ -749,9 +762,9 @@ body {
 
 .project-sircle-p1 {
   position: absolute;
-  top: 55% !important;
-  left: 55% !important;
-  font-size: 20px !important;
+  top: 60% !important;
+  left: 58% !important;
+  font-size: 19px !important;
   font-family: "Roboto", serif !important;
   color: rgb(255, 255, 255);
   font-weight: 400;
@@ -918,8 +931,9 @@ body {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Black shadow with some transparency */
   font-family: "Roboto", serif;
   position: absolute;
-  left: 35%;
-  top: 35%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 1000;
 
 }
@@ -1077,15 +1091,35 @@ body {
 
 }
 @media only screen and (max-width: 1100px) {
-  
+ 
+  .exploring-planets {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .image {
+    width: 100% !important;
+    height: 60vh !important;
+  }
     
-    /* .carousel-next-page {
-      top: 47% !important;
-      } */
-  
-      
-      
-    }
+  .header {
+    justify-content: center;
+  }
+
+  .title {
+    text-align: center;
+  }
+  .description {
+    padding: 0px !important;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .cta {
+    width: 100% !important;
+    margin-bottom: 20px;
+  }
+}
     
     
 
@@ -1139,7 +1173,7 @@ body {
 }
 @media only screen and (max-width: 780px) {
   .project-slider-span {
-    left: 18%;
+    /* left: 18%; */
   }
 
   .restaurant-span-text {
@@ -1161,7 +1195,7 @@ body {
 
 @media only screen and (max-width: 680px)  {
   .project-slider-span {
-    left: 23%;
+    /* left: 23%; */
     font-size: 80px;
   }
 
@@ -1207,10 +1241,10 @@ body {
 
 }
 @media only screen and (max-width: 580px) {
-  .project-slider-span {
+  /* .project-slider-span {
     left: 20%;
     font-size: 80px;
-  }
+  } */
 
   .content-h1 {
     font-size: 80px;
@@ -1292,20 +1326,20 @@ body {
   }
 
   .sircle-spans1 {
-    font-size: 20px !important;
+    font-size: 16px !important;
   }
 
   .items-1 {
-    font-size: 20px !important;
+    font-size: 16px !important;
   }
   .items-2 {
-    font-size: 20px !important;
+    font-size: 16px !important;
   }
   .items-3 {
-    font-size: 20px !important;
+    font-size: 16px !important;
   }
   .items-4 {
-    font-size: 20px !important;
+    font-size: 16px !important;
   }
 
 }
@@ -1317,7 +1351,8 @@ body {
 @media only screen and (max-width: 415px) {
   
   .project-slider-span {
-    left: 12%;
+    font-size: 60px;
+    
   }
 
   .carousel-container {
@@ -1587,19 +1622,94 @@ body {
 .description {
   font-size: 16px;
   line-height: 1.5;
+  padding: 0px 30px 0px 0px;
 }
 
 .image {
   height: 88vh;
-  width: 50%;
+  width: 70%;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rebeccapurple;
+  background-image: url(../src/assets/4y.jpg);
+  background-size: cover;
+  object-fit: cover;
+  background-repeat: no-repeat;
+  
 }
 
 .image img {
   max-width: 100%;
   height: auto;
   border-radius: 8px;
+}
+
+
+/* From Uiverse.io by alexmaracinaru */ 
+.cta {
+  width: 250px;
+  position: relative;
+  padding: 10.5px 18px;
+  transition: all 0.2s ease;
+  border: none;
+  background: none;
+  cursor: pointer;
+  background-color: white;
+  border-radius: 25px;
+}
+
+.cta:before {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  display: block;
+  border-radius: 50px;
+  background: #1c1c1c;
+  width: 43px;
+  height: 43px;
+  transition: all 0.3s ease;
+}
+
+.cta span {
+  position: relative;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  color: #234567;
+}
+
+.cta svg {
+  position: relative;
+  top: 0;
+  margin-left: 10px;
+  fill: none;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke: #234567;
+  stroke-width: 2;
+  transform: translateX(-5px);
+  transition: all 0.3s ease;
+}
+
+.cta:hover:before {
+  width: 100%;
+  background: #b1dae7;
+}
+
+.cta:hover svg {
+  transform: translateX(0);
+}
+
+.cta:active {
+  transform: scale(0.95);
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
 }
