--- a/src/index.css
+++ b/src/index.css
@@ -1649,7 +1649,6 @@ body {
 /* From Uiverse.io by alexmaracinaru */ 
 .cta {
   width: 250px;
-  position: relative;
   padding: 10.5px 18px;
   transition: all 0.2s ease;
   border: none;
@@ -1657,60 +1656,19 @@ body {
   cursor: pointer;
   background-color: white;
   border-radius: 25px;
-}
-
-.cta:before {
-  content: "";
-  position: absolute;
-  top: 1px;
-  left: 1px;
-  display: block;
-  border-radius: 50px;
-  background: #1c1c1c;
-  width: 43px;
-  height: 43px;
-  transition: all 0.3s ease;
-}
-
-.cta span {
-  position: relative;
-  font-family: "Ubuntu", sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  letter-spacing: 0.05em;
   color: #234567;
 }
 
-.cta svg {
-  position: relative;
-  top: 0;
-  margin-left: 10px;
-  fill: none;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke: #234567;
-  stroke-width: 2;
-  transform: translateX(-5px);
-  transition: all 0.3s ease;
+.cta:hover {
+  transform: scale(1.1);
 }
 
-.cta:hover:before {
-  width: 100%;
-  background: #b1dae7;
-}
 
-.cta:hover svg {
-  transform: translateX(0);
-}
-
-.cta:active {
-  transform: scale(0.95);
-}
 
 .content {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  align-items: center;
+  align-items: flex-start;
 }
